ASSEMBLY = Chronojump_Mini
TARGET = exe
LINK = $(REF_DEP_CHRONOJUMP)

SOURCES= \
	chronojump_mini.cs \
	../buildInfo.cs \
	../chronopic.cs \
	../utilAll.cs \
	../utilDate.cs \
	../log.cs \
	../logB.cs \
	../logConsoleCrayon.cs \
	../constants.cs

bin_SCRIPTS = chronojump_mini

include $(top_srcdir)/build/build.mk
