ASSEMBLY = Chronojump_Mini
TARGET = exe
LINK = $(REF_DEP_CHRONOJUMP)

SOURCES= \
	chronojump_mini.cs \
	../buildInfo.cs \
	../chronopic.cs \
	../util/all.cs \
	../util/date.cs \
	../log.cs \
	../logB.cs \
	../logConsoleCrayon.cs \
	../constants.cs

bin_SCRIPTS = chronojump_mini

include $(top_srcdir)/build/build.mk
